--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,
-
-initia1-scale=l.0">
-
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Práctica 2.8</title>
-<link rel="stylesheet" href="css/estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initia1-scale=l.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Práctica 2.8</title>
+    <link rel="stylesheet" href="CSS/estilos.css">
 
 </head>
+
 <body>
 
-<h1>Práctica 2.8</h1>
+    <h1>Práctica 2.8</h1>
+    <p>Aprendiendo Git</p>
 
 </body>
+
 </html>
